# metta-motto-biochatter

./: README.md
examples/bio_ai/: bio-ai.metta  bio_ai_agent.msa  requirements.py  requirements.txt
examples/bio_ai/biochatter/: metta_prompt.py
examples/bio_ai/biochatter-metta/: __init__.py  main.py  prompts.py
examples/bio_ai/motto/: llm_gate.py
examples/bio_ai/motto/agents/: metta_agent.py
examples/bio_ai/motto/agents/biochatter/: .gitignore  README.md  biochatter.py  metta_prompt.py  prompts.py  pyproject.toml  requirements.txt  vectorstore.py
examples/bio_ai/motto/agents/biochatter/biocypher_config/: biocypher_config.yaml  schema_config.yaml
